--- a/.github/workflows/run-script.yaml
+++ b/.github/workflows/run-script.yaml
@@ -7,7 +7,7 @@ on:
       working_directory:
         type: string
         description: What working directory should be passed to the script
-        default: "$(Get-Location)/containers/ubuntu"
+        default: "./containers/ubuntu"
       run_packer_init:
         type: boolean
         description: 'Run Packer init?'
