--- a/.github/workflows/build-docker.yaml
+++ b/.github/workflows/build-docker.yaml
@@ -52,5 +52,5 @@ jobs:
             -DebugMode ${{ inputs.enable_debug_mode }} `
             -DockerImageName ${{ inputs.docker_image_name }} `
             -DockerFileName ${{ inputs.docker_file_name }} `
-            -RegistryUsername ${{ secrets.RegistryUsername }}
+            -RegistryUsername ${{ secrets.RegistryUsername }} `
             -RegistryPassword ${{ secrets.RegistryPassword }}
