--- a/.github/workflows/build-docker.yaml
+++ b/.github/workflows/build-docker.yaml
@@ -11,7 +11,7 @@ on:
       docker_image_name:
         type: string
         description: 'Docker Image name?'
-        default: ubuntu-cicd-base
+        default: ubuntu-cicd-base:latest
       enable_debug_mode:
         type: boolean
         description: 'Whether debug mode should be enable for within the script'
