--- a/containers/jenkins-alpine/Dockerfile
+++ b/containers/jenkins-alpine/Dockerfile
@@ -59,7 +59,8 @@ RUN git clone https://github.com/pyenv/pyenv.git /home/${NORMAL_USER}/.pyenv && 
     pyenvLatestStable=$(pyenv install --list | grep -v - | grep -E "^\s*[0-9]+\.[0-9]+\.[0-9]+$" | tail -1) && \
     pyenv install $pyenvLatestStable && \
     pyenv global $pyenvLatestStable && \
-    pip install --upgrade pip
+    pip install --upgrade pip && \
+    pip install pip-system-certs
 
 #Install Azure Modules for Powershell - This can take a while, so setting as final step to shorten potential rebuilds
 RUN pwsh -Command Set-PSRepository -Name "PSGallery" -InstallationPolicy Trusted && \
@@ -90,6 +91,7 @@ USER ${NORMAL_USER}
 WORKDIR /home/${NORMAL_USER}
 
 RUN pip3 install --user \
+    pip-system-certs \
     pipenv \
     virtualenv \
     terraform-compliance \
