--- a/containers/jenkins-alpine/Dockerfile
+++ b/containers/jenkins-alpine/Dockerfile
@@ -95,6 +95,7 @@ RUN git clone --depth=1 https://github.com/tfutils/tfenv.git /opt/.tfenv && \
 RUN git clone https://github.com/iamhsa/pkenv.git /opt/.pkenv && \
     PACKER_LATEST_URL=$(curl -sL https://releases.hashicorp.com/packer/index.json | jq -r '.versions[].builds[].url' | egrep -v 'rc|beta|alpha' | egrep 'linux.*amd64'  | tail -1) && \
     PACKER_LATEST_VERSION=$(echo "$PACKER_LATEST_URL" | awk -F '/' '{print $6}' | sed 's/packer_//' | sed 's/_linux_amd64.zip//') && \
+    cd /opt/.pkenv && \
     pkenv install ${PACKER_LATEST_VERSION} && \
     pkenv use ${PACKER_LATEST_VERSION}
 
